# rust-web-digest

./: .gitignore  Cargo.toml
.github/workflows/: collect.yml  compose.yml  publish.yml
config/: sources.toml
docs/: source-registry.md
src/: ai.rs  composer.rs  config.rs  domain.rs  editorial.rs  github_issues.rs  lib.rs  main.rs  normalize.rs  publication.rs  reconcile.rs  storage.rs
src/collectors/: crates_io.rs  feed.rs  github.rs  mod.rs  rustsec.rs
tests/: phase1.rs  phase2.rs  phase3.rs  phase4.rs  phase5.rs  phase6.rs  phase7.rs
tests/fixtures/: atom.xml  crates_io_axum.json  github_editorial_state.json  github_releases.json  osv_query.json  rss.xml
