[package]
name = "rust-web-digest"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "Collect and normalize Rust web ecosystem newsletter candidates"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
feed-rs = "2.4.0"
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
semver = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
toml = "1.1.2"
url = "2.5.8"

[dev-dependencies]
tempfile = "3"
